--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ vertexai==0.0.1
 requests==2.27.1
 requests-oauthlib==1.3.1
 google-cloud-firestore==2.13.1
+fastapi==0.104.1
 google-generativeai==0.3.1
 google-auth==2.25.2
 google-auth-httplib2==0.1.1
